--- a/.travis.yml
+++ b/.travis.yml
@@ -6,24 +6,22 @@ dist:       xenial
 sudo:       false
 language:   python
 
-python:
-    - 3.5
-    - 3.6
+
 
 matrix:
     include:
+        - name: "Python 3.6.7 on Bionic/armd64"
+          os: linux
+          arch: arm64
+          dist: bionic
+          python: 3.6.7
+       
         - name: "Python 3.6.7 on Bionic/amd64"
           os: linux
           arch: amd64
           dist: bionic
           python: 3.6.7
-        - name: "Python 3.6.8 on OSX"
-          os: osx
-          osx_image: xcode9.2
-          language: generic
-          python:   3.6
-          env:      WANTED_PYTHON_VERSION=3.6
-
+       
 addons:
     apt:
         packages:
